Fix horizontal scrolling

--- a/content/assets/style/_layout.scss
+++ b/content/assets/style/_layout.scss
@@ -296,8 +296,6 @@ body.page .content {
 }
 
 body.home .hero {
-    padding: 0 40px;
-    margin: 0 -40px;
     box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
 
     .hero-content {
@@ -326,8 +324,6 @@ body.home .hero {
                 position: absolute;
                 top: 0;
                 left: 300px;
-                @include transform-origin(top, left);
-                @include transform(scale(0.8, 0.8));
             }
         }
 
@@ -452,8 +448,8 @@ footer {
 footer {
     background: #554f4b;
 
-    padding: 40px 40px 80px 40px;
-    margin: 60px -40px -40px -40px;
+    padding: 40px 0 80px 0;
+    margin: 60px 0 -40px 0;
     box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
 
     .footer-content {
